# treem

./: .aider.conf.yml  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  ODOT  README.md  README.rst  TODO  codemeta.json  pyproject.toml  pyproject.toml.old  pyproject.toml.old.2  setup.py  sonar-project.properties  tox.ini  tox.ini.old
.github/workflows/: build.yml  build.yml.old  build.yml.old.2  publish.yml  python-app.yml  sonarcloud.yml
doc/source/: conf.py  installation.rst
docs/: CONVENTIONS.md  SWC-min.md  SWC.md  requirements.txt
docs/_build/html/: .buildinfo  api.html  cli.html  examples.html  genindex.html  index.html  installation.html  introduction.html  (+4 more)
docs/source/: .aider.conf.yml  cli.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  swc.rst
scripts/: swc2pts.py
tests/: test_cmd_check.py  test_cmd_convert.py  test_cmd_find.py  test_cmd_measure.py  test_cmd_modify.py  test_cmd_repair.py  test_cmd_view.py  test_geom.py  test_import.py  test_io.py  test_morph.py  test_plot.py  test_tree.py
tests.exp/: test_cmd_check.py  test_cmd_measure.py  test_cmd_modify.py  test_cmd_view.py  test_import.py  test_io.py  test_morph.py
tests.exp/data/: fail_allen_2.swc  fail_no_data.swc  fail_node1_not_id1.swc  fail_node1_not_soma.swc  fail_non_descendant.swc  fail_non_increasing_ids.swc  fail_non_sequential_ids.swc  fail_not_valid_ids.swc  fail_undef_parent_ids.swc  pass_mouselight_1.swc  pass_simple_branch.swc
tests/data/: clone1.swc  clone2.swc  fail_diam.swc  fail_non_unique_ids.swc  fail_not_array_2.swc  fail_not_valid_parent_ids.swc  fail_single_point.swc  mod.swc  pass_nmo_2_cut.swc  pass_nmo_3_cut.swc  rep.swc
tests_duplicate/: test_cmd_check.py  test_cmd_measure.py  test_cmd_repair.py  test_cmd_view.py
tests_duplicate/data/: fail_allen_1.swc  fail_node1_has_parent.swc  fail_non_stem_neurite.swc  fail_not_array_1.swc  fail_not_swc_cols.swc  fail_not_swc_ext.txt  fail_not_valid_types.swc  fail_unordered.swc  pass_mouselight_2.swc  pass_nmo_1.swc  pass_simple_branch_2.swc  pass_soma.swc  pass_zjump.swc
treem/: __init__.py  cli.py  io.py  morph.py  morph.py.old  tree.py
treem/commands/: check.py  check.py.new  convert.py  find.py  measure.py  measure.py.old  meter.py  modify.py  modify.py.old  render.py  repair.py  repair.py.new  repair.py.old  view.py  view.py.old
treem/utils/: __init__.py  geom.py  plot.py
tutorials/: .gitignore  cli_01_quick_start.ipynb
(+26 files in other folders)
