[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treem"
version = "1.2.0.dev12"
description = "Tree-like morphology data processing tool"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.7, <4.0"
authors = [
    { name = "Alexander Kozlov", email = "akozlov@kth.se" },
]
keywords = [
    "modification",
    "morphology",
    "morphometry",
    "neuron",
    "processing",
    "reconstruction",
    "repair",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy",
]

[project.scripts]
swc = "treem.cli:cli"

[project.urls]
Homepage = "https://github.com/a1eko/treem"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "ruff",
    "numpy",
    "matplotlib",
]
[tool.hatch.build.targets.wheel]
packages = ["treem"]

[tool.hatch.envs.default]
dependencies = [
    "-e",
    ".[test]",
]

[tool.ruff]
line-length = 79
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Error, Flake8, Warning, and Isort rules
ignore = ["E501"]
